--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,20 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.tokenlaunchpad {
+  height: 2rem;
+  width: 16rem;
+  padding: 10px;
+  margin-bottom: 0.5rem;
+}
+
+.tokenlaunchbutton {
+  height: 4rem;
+  width: 10rem;
+}
+
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
